objects/Workshop__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Duration_in_Hours__c</fullName>
        <formula>(End_Time__c - Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Learning_Center_Subject__c</fullName>
        <label>Learning Center Subject</label>
        <picklist>
            <picklistValues>
                <fullName>1-1.Definition of tutoring/tutor duties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2. Basic tutoring do’s and don’ts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3.Techniques to begin/end sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-4.Adult learners/theory, and/or styles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5.	Addressing difficult situations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-6.	Role modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-7.	Setting goals and/or planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-8.	Communication skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-9.	Active listening and paraphrasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-10. Referral skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-11. Study skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-12. Critical thinking skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-13. Learning Center Ethics and Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-14. Modeling problem solving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-15. Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-1.	Review of Level 1 topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-2.	Use of probing questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3.	Brain Dominance Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3a. Cultural awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3b. inter-cultural communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3c. Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3d. special needs students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4.	Identifying and using resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-6.Tutoring specific skills/subjects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-7.	Assessing/changing study behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-8.	Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-1.Review of Level 1 &amp; 2 topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-2.	SRL, brain learning, and/or memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-3.How to tutor/deal w/ target groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4.Role of learning CTRS in higher ed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Workshop</label><nameField>
        <label>Workshop Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Workshops</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration_in_Hours__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>